# ai-video-editor

./: .gitignore  AI_INTEGRATION_COMPLETE.md  MAKEFILE_GUIDE.md  MANUAL_SETUP.md  Makefile  Makefile.podman  Makefile.windows  PHASE5_COMPLETE.md  QUICK_SETUP.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  START_APP.md  START_CELERY.md  add_test_videos.py  debug_video_process.py  docker-compose.podman.yml  docker-compose.yml  easy_test_runner.py  format.ps1  pyproject.toml  simple_test.py  start-databases.ps1  test_ai_integration.py
.devcontainer/: devcontainer.json
AI_VIDEO_EDITOR_PROJECT/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  INDEX.md  PROJECT_OVERVIEW.md  PROJECT_TICKETS.md  README.md  SETUP.md
RnD and Plan/: cinematic-implementation.md  cinematic-video-guide.md  executive-briefing.md  quality-summary.md  quick-reference.md  research-summary.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  commit_msg.txt  pyproject.toml  requirements.txt  test_video_flow.py
backend/app/: celery_app.py  config.py  main.py
backend/app/exporters/: mlt_exporter.py
backend/app/models/: job.py  video.py
backend/app/routes/: beat_routes.py  download.py  frei0r_routes.py  jobs.py  transition_routes.py  upload.py
backend/app/schemas/: job.py
backend/app/services/: ai_director.py  ai_reframing.py  beat_detector.py  ffmpeg_handler.py  frei0r_service.py  segment_planner.py  style_editor.py  transition_service.py  transitions.py  video_enhancement.py  video_processor.py
backend/app/tasks/: __init__.py  video_tasks.py
backend/easy_test/output_results/: test_results_20260103_193812.json
backend/scripts/: run_transition_test.py  test_beat_api.py
backend/tests/: test_api_errors.py  test_integration_upload_flow.py
backend/tests/beat_diagnostics/: run_diagnostics.py
backend/tmp_test/: test_project.mlt
docker/: .env.example  DOCKER_DESKTOP_SETUP.txt  MANUAL_SETUP.txt  PODMAN_SETUP.txt  QUICK_START.md  README.md  docker-compose.yml  start-databases.ps1  stop-databases.ps1
easy_test/input_videos/: README.md
frontend/: .gitignore  Dockerfile  Makefile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BeatTimeline.tsx  Frei0rSelector.css  Frei0rSelector.tsx  MusicTimeline.tsx  PodcastUpload.tsx  ProgressTracker.tsx  StyleSelector.tsx  ThemeToggle.tsx  TransitionSelector.css  TransitionSelector.tsx  UploadForm.tsx  index.ts
scripts/: check_containers.ps1  check_stack.ps1
setup/: POWERSHELL_GUIDE.md  README.md  dev-backend.ps1  dev-frontend.ps1  dev.ps1  format.ps1  lint.ps1  logs.ps1  setup.ps1  stop.ps1  test.ps1
test_framework/: __init__.py  main.py  test_runners.py  video_test_suite.py
vscode-config/: extensions.json  launch.json  settings.json
